tests/spec/lex/snapshots/format_string_with_function_call_string_arg.snap
---
source: tests/spec/lex/mod.rs
description: "f\"x: {func(\"arg\")}\""
---
LexResult {
    tokens: [
        Token {
            kind: FormatStringStart,
            text: "f\"",
            byte_offset: 0,
            byte_length: 2,
        },
        Token {
            kind: FormatStringText,
            text: "x: ",
            byte_offset: 2,
            byte_length: 3,
        },
        Token {
            kind: FormatStringInterpolationStart,
            text: "{",
            byte_offset: 5,
            byte_length: 1,
        },
        Token {
            kind: Identifier,
            text: "func",
            byte_offset: 6,
            byte_length: 4,
        },
        Token {
            kind: LeftParen,
            text: "(",
            byte_offset: 10,
            byte_length: 1,
        },
        Token {
            kind: String,
            text: "\"arg\"",
            byte_offset: 11,
            byte_length: 5,
        },
        Token {
            kind: RightParen,
            text: ")",
            byte_offset: 16,
            byte_length: 1,
        },
        Token {
            kind: FormatStringInterpolationEnd,
            text: "}",
            byte_offset: 17,
            byte_length: 1,
        },
        Token {
            kind: FormatStringEnd,
            text: "\"",
            byte_offset: 18,
            byte_length: 1,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 19,
            byte_length: 0,
        },
    ],
    errors: [],
    blank_lines: [],
}
