tests/spec/lex/snapshots/format_string_with_if_expression.snap
---
source: tests/spec/lex/mod.rs
description: "f\"result: {if x { 1 } else { 0 }}\""
---
LexResult {
    tokens: [
        Token {
            kind: FormatStringStart,
            text: "f\"",
            byte_offset: 0,
            byte_length: 2,
        },
        Token {
            kind: FormatStringText,
            text: "result: ",
            byte_offset: 2,
            byte_length: 8,
        },
        Token {
            kind: FormatStringInterpolationStart,
            text: "{",
            byte_offset: 10,
            byte_length: 1,
        },
        Token {
            kind: If,
            text: "if",
            byte_offset: 11,
            byte_length: 2,
        },
        Token {
            kind: Identifier,
            text: "x",
            byte_offset: 14,
            byte_length: 1,
        },
        Token {
            kind: LeftCurlyBrace,
            text: "{",
            byte_offset: 16,
            byte_length: 1,
        },
        Token {
            kind: Integer,
            text: "1",
            byte_offset: 18,
            byte_length: 1,
        },
        Token {
            kind: RightCurlyBrace,
            text: "}",
            byte_offset: 20,
            byte_length: 1,
        },
        Token {
            kind: Else,
            text: "else",
            byte_offset: 22,
            byte_length: 4,
        },
        Token {
            kind: LeftCurlyBrace,
            text: "{",
            byte_offset: 27,
            byte_length: 1,
        },
        Token {
            kind: Integer,
            text: "0",
            byte_offset: 29,
            byte_length: 1,
        },
        Token {
            kind: RightCurlyBrace,
            text: "}",
            byte_offset: 31,
            byte_length: 1,
        },
        Token {
            kind: FormatStringInterpolationEnd,
            text: "}",
            byte_offset: 32,
            byte_length: 1,
        },
        Token {
            kind: FormatStringEnd,
            text: "\"",
            byte_offset: 33,
            byte_length: 1,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 34,
            byte_length: 0,
        },
    ],
    errors: [],
    blank_lines: [],
}
