tests/spec/lex/snapshots/format_string_with_map_access.snap
---
source: tests/spec/lex/mod.rs
description: "f\"result: {map[\"key\"]}\""
---
LexResult {
    tokens: [
        Token {
            kind: FormatStringStart,
            text: "f\"",
            byte_offset: 0,
            byte_length: 2,
        },
        Token {
            kind: FormatStringText,
            text: "result: ",
            byte_offset: 2,
            byte_length: 8,
        },
        Token {
            kind: FormatStringInterpolationStart,
            text: "{",
            byte_offset: 10,
            byte_length: 1,
        },
        Token {
            kind: Identifier,
            text: "map",
            byte_offset: 11,
            byte_length: 3,
        },
        Token {
            kind: LeftSquareBracket,
            text: "[",
            byte_offset: 14,
            byte_length: 1,
        },
        Token {
            kind: String,
            text: "\"key\"",
            byte_offset: 15,
            byte_length: 5,
        },
        Token {
            kind: RightSquareBracket,
            text: "]",
            byte_offset: 20,
            byte_length: 1,
        },
        Token {
            kind: FormatStringInterpolationEnd,
            text: "}",
            byte_offset: 21,
            byte_length: 1,
        },
        Token {
            kind: FormatStringEnd,
            text: "\"",
            byte_offset: 22,
            byte_length: 1,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 23,
            byte_length: 0,
        },
    ],
    errors: [],
    blank_lines: [],
}
