tests/spec/lex/snapshots/format_string_with_method_call.snap
---
source: tests/spec/lex/mod.rs
description: "f\"result: {obj.method()}\""
---
LexResult {
    tokens: [
        Token {
            kind: FormatStringStart,
            text: "f\"",
            byte_offset: 0,
            byte_length: 2,
        },
        Token {
            kind: FormatStringText,
            text: "result: ",
            byte_offset: 2,
            byte_length: 8,
        },
        Token {
            kind: FormatStringInterpolationStart,
            text: "{",
            byte_offset: 10,
            byte_length: 1,
        },
        Token {
            kind: Identifier,
            text: "obj",
            byte_offset: 11,
            byte_length: 3,
        },
        Token {
            kind: Dot,
            text: ".",
            byte_offset: 14,
            byte_length: 1,
        },
        Token {
            kind: Identifier,
            text: "method",
            byte_offset: 15,
            byte_length: 6,
        },
        Token {
            kind: LeftParen,
            text: "(",
            byte_offset: 21,
            byte_length: 1,
        },
        Token {
            kind: RightParen,
            text: ")",
            byte_offset: 22,
            byte_length: 1,
        },
        Token {
            kind: FormatStringInterpolationEnd,
            text: "}",
            byte_offset: 23,
            byte_length: 1,
        },
        Token {
            kind: FormatStringEnd,
            text: "\"",
            byte_offset: 24,
            byte_length: 1,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 25,
            byte_length: 0,
        },
    ],
    errors: [],
    blank_lines: [],
}
