tests/spec/lex/snapshots/format_string_with_nested_fstring.snap
---
source: tests/spec/lex/mod.rs
description: "f\"outer: {f\"inner: {x}\"}\""
---
LexResult {
    tokens: [
        Token {
            kind: FormatStringStart,
            text: "f\"",
            byte_offset: 0,
            byte_length: 2,
        },
        Token {
            kind: FormatStringText,
            text: "outer: ",
            byte_offset: 2,
            byte_length: 7,
        },
        Token {
            kind: FormatStringInterpolationStart,
            text: "{",
            byte_offset: 9,
            byte_length: 1,
        },
        Token {
            kind: FormatStringStart,
            text: "f\"",
            byte_offset: 10,
            byte_length: 2,
        },
        Token {
            kind: FormatStringText,
            text: "inner: ",
            byte_offset: 12,
            byte_length: 7,
        },
        Token {
            kind: FormatStringInterpolationStart,
            text: "{",
            byte_offset: 19,
            byte_length: 1,
        },
        Token {
            kind: Identifier,
            text: "x",
            byte_offset: 20,
            byte_length: 1,
        },
        Token {
            kind: FormatStringInterpolationEnd,
            text: "}",
            byte_offset: 21,
            byte_length: 1,
        },
        Token {
            kind: FormatStringEnd,
            text: "\"",
            byte_offset: 22,
            byte_length: 1,
        },
        Token {
            kind: FormatStringInterpolationEnd,
            text: "}",
            byte_offset: 23,
            byte_length: 1,
        },
        Token {
            kind: FormatStringEnd,
            text: "\"",
            byte_offset: 24,
            byte_length: 1,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 25,
            byte_length: 0,
        },
    ],
    errors: [],
    blank_lines: [],
}
