tests/spec/lex/snapshots/format_string_with_struct_literal.snap
---
source: tests/spec/lex/mod.rs
description: "f\"point: {Point { x: 1, y: 2 }}\""
---
LexResult {
    tokens: [
        Token {
            kind: FormatStringStart,
            text: "f\"",
            byte_offset: 0,
            byte_length: 2,
        },
        Token {
            kind: FormatStringText,
            text: "point: ",
            byte_offset: 2,
            byte_length: 7,
        },
        Token {
            kind: FormatStringInterpolationStart,
            text: "{",
            byte_offset: 9,
            byte_length: 1,
        },
        Token {
            kind: Identifier,
            text: "Point",
            byte_offset: 10,
            byte_length: 5,
        },
        Token {
            kind: LeftCurlyBrace,
            text: "{",
            byte_offset: 16,
            byte_length: 1,
        },
        Token {
            kind: Identifier,
            text: "x",
            byte_offset: 18,
            byte_length: 1,
        },
        Token {
            kind: Colon,
            text: ":",
            byte_offset: 19,
            byte_length: 1,
        },
        Token {
            kind: Integer,
            text: "1",
            byte_offset: 21,
            byte_length: 1,
        },
        Token {
            kind: Comma,
            text: ",",
            byte_offset: 22,
            byte_length: 1,
        },
        Token {
            kind: Identifier,
            text: "y",
            byte_offset: 24,
            byte_length: 1,
        },
        Token {
            kind: Colon,
            text: ":",
            byte_offset: 25,
            byte_length: 1,
        },
        Token {
            kind: Integer,
            text: "2",
            byte_offset: 27,
            byte_length: 1,
        },
        Token {
            kind: RightCurlyBrace,
            text: "}",
            byte_offset: 29,
            byte_length: 1,
        },
        Token {
            kind: FormatStringInterpolationEnd,
            text: "}",
            byte_offset: 30,
            byte_length: 1,
        },
        Token {
            kind: FormatStringEnd,
            text: "\"",
            byte_offset: 31,
            byte_length: 1,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 32,
            byte_length: 0,
        },
    ],
    errors: [],
    blank_lines: [],
}
