tests/spec/lex/snapshots/format_string_with_variable.snap
---
source: tests/spec/lex/mod.rs
description: "f\"hello {name}\""
---
LexResult {
    tokens: [
        Token {
            kind: FormatStringStart,
            text: "f\"",
            byte_offset: 0,
            byte_length: 2,
        },
        Token {
            kind: FormatStringText,
            text: "hello ",
            byte_offset: 2,
            byte_length: 6,
        },
        Token {
            kind: FormatStringInterpolationStart,
            text: "{",
            byte_offset: 8,
            byte_length: 1,
        },
        Token {
            kind: Identifier,
            text: "name",
            byte_offset: 9,
            byte_length: 4,
        },
        Token {
            kind: FormatStringInterpolationEnd,
            text: "}",
            byte_offset: 13,
            byte_length: 1,
        },
        Token {
            kind: FormatStringEnd,
            text: "\"",
            byte_offset: 14,
            byte_length: 1,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 15,
            byte_length: 0,
        },
    ],
    errors: [],
    blank_lines: [],
}
