tests/spec/lex/snapshots/hex_basic.snap
---
source: tests/spec/lex/mod.rs
description: "0xFF"
---
LexResult {
    tokens: [
        Token {
            kind: Integer,
            text: "0xFF",
            byte_offset: 0,
            byte_length: 4,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 4,
            byte_length: 0,
        },
    ],
    errors: [],
    blank_lines: [],
}
