tests/spec/lex/snapshots/hex_long.snap
---
source: tests/spec/lex/mod.rs
description: "0xC96C5795D7870F42"
---
LexResult {
    tokens: [
        Token {
            kind: Integer,
            text: "0xC96C5795D7870F42",
            byte_offset: 0,
            byte_length: 18,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 18,
            byte_length: 0,
        },
    ],
    errors: [],
    blank_lines: [],
}
